styled content within main to be centered

--- a/public/index.html
+++ b/public/index.html
@@ -27,12 +27,13 @@
 
     <!-- Top nav bar (fixed) -->
     <nav id="nav-bar">
-      <img class="logo" src="/images/bird.png">
+      <img class="logo" src="/images/bird.png"  >
       <span class="header">Tweeter</span>
     </nav>
 
     <!-- Page-specific (main) content here -->
     <main class="container">
+      <p> test <p>
     </main>
 
   </body>
