styled new tweets text box

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,9 @@
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
 
+    <!-- New Tweets CSS -->
+    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
 
@@ -33,7 +36,14 @@
 
     <!-- Page-specific (main) content here -->
     <main class="container">
-      <p> test <p>
+      <section class="new-tweet">
+        <h2 id="compose">Compose Tweet</h2>
+        <form action="/tweets" method="POST" Content-Type: application/x-www-form-urlencoded>
+          <textarea name="tweet_text" placeholder="What are you humming about?"></textarea>
+          <input type="submit" value="Tweet">
+          <span class="counter">140</span>
+      </form>
+      </section>
     </main>
 
   </body>
