--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,11 @@
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/app.js"></script>
-  </head>
 
-  <body>
+    <!-- Char Counter JS -->
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+
+  </head>
 
     <!-- Top nav bar (fixed) -->
     <nav id="nav-bar">
@@ -39,9 +41,9 @@
       <section class="new-tweet">
         <h2 id="compose">Compose Tweet</h2>
         <form action="/tweets" method="POST" Content-Type: application/x-www-form-urlencoded>
-          <textarea name="tweet_text" placeholder="What are you humming about?"></textarea>
+          <textarea id="tweet" name="tweet_text" placeholder="What are you humming about?"></textarea>
           <input type="submit" value="Tweet">
-          <span class="counter">140</span>
+          <span class="counter"></span>
       </form>
       </section>
     </main>
