starting styling for new tweets

--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,11 @@
           <span class="counter"></span>
       </form>
       </section>
+      <section class="tweets">
+        <div class="content">
+          <header>Newton</header>
+        </div>
+      </section>
     </main>
 
   </body>
