completed hover behaviour on new tweets

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,9 @@
     <!-- Tweets CSS -->
     <link rel="stylesheet" href="/styles/tweets.css" type="text/css" />
 
+    <!-- Import Font Awesome's Icons -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
 
@@ -58,11 +61,14 @@
           </header>
           <article class="tweet">Hello this is my tweet!</article>
           <footer>
-            <p>10 days ago</p>
+            <p>10 days ago
+              <i class="fas fa-heart"></i>
+              <i class="fas fa-flag"></i>
+              <i class="fas fa-retweet"></i>
+            </p>
           </footer>
         </div>
       </section>
     </main>
-
   </body>
 </html>
