finished timestamp converter function for tweets

--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,23 @@
           <span class="counter"></span>
       </form>
       </section>
+      <section class="tweets">
+        <div class="content">
+          <header>
+            <img class="avatar" src="/images/bird.png">
+            <span class="user">Tweeter</span>
+            <h6 class='handle'>@tweeter</h6>
+          </header>
+          <article class="tweet">Hello this is my tweet!</article>
+          <footer>
+            <p>10 days ago
+              <i class="fas fa-heart"></i>
+              <i class="fas fa-retweet"></i>
+              <i class="fas fa-flag"></i>
+            </p>
+          </footer>
+        </div>
+      </section>
     </main>
   </body>
 </html>
