--- a/public/index.html
+++ b/public/index.html
@@ -46,28 +46,11 @@
     <main class="container">
       <section class="new-tweet">
         <h2 id="compose">Compose Tweet</h2>
-        <form action="/tweets" method="POST" Content-Type: application/x-www-form-urlencoded>
-          <textarea id="tweet" name="tweet_text" placeholder="What are you humming about?"></textarea>
+        <form class="new_tweet"action="/tweets" method="POST" Content-Type: application/x-www-form-urlencoded>
+          <textarea id="tweet" name="text" placeholder="What are you humming about?"></textarea>
           <input type="submit" value="Tweet">
           <span class="counter"></span>
-      </form>
-      </section>
-      <section class="tweets">
-        <div class="content">
-          <header>
-            <img class="avatar" src="/images/bird.png">
-            <span class="user">Tweeter</span>
-            <h6 class='handle'>@tweeter</h6>
-          </header>
-          <article class="tweet">Hello this is my tweet!</article>
-          <footer>
-            <p>10 days ago
-              <i class="fas fa-heart"></i>
-              <i class="fas fa-retweet"></i>
-              <i class="fas fa-flag"></i>
-            </p>
-          </footer>
-        </div>
+        </form>
       </section>
     </main>
   </body>
