--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,8 @@
           <span class="counter"></span>
         </form>
       </section>
+      <div class="tweet-container">
+      </div>
     </main>
   </body>
 </html>
