--- a/public/index.html
+++ b/public/index.html
@@ -34,18 +34,27 @@
     <!-- Char Counter JS -->
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
 
+    <!-- New Tweet Toggle JS -->
+    <script type="text/javascript" src="/scripts/button-toggle.js"></script>
+
   </head>
 
     <!-- Top nav bar (fixed) -->
     <nav id="nav-bar">
       <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
+      <button class="compose">
+        <i class="fas fa-pen"></i>Compose
+      </button>
     </nav>
 
     <!-- Page-specific (main) content here -->
     <main class="container">
       <section class="new-tweet">
         <h2 id="compose">Compose Tweet</h2>
+        <div class="isa_error">
+
+        </div>
         <form class="new_tweet"action="/tweets" method="POST" Content-Type: application/x-www-form-urlencoded>
           <textarea id="tweet" name="text" placeholder="What are you humming about?"></textarea>
           <input type="submit" value="Tweet">
