swapped time stamp to use moment.js

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,10 @@
 
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
-
+    
+    <!-- Moment JS library-->
+    <script src="https://cdn.jsdelivr.net/npm/moment@2.24.0/moment.min.js"></script>
+    
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/app.js"></script>
 
